# QtWaitingSpinner

./: .gitignore  README.md  pyproject.toml  setup.py
pyqtspinner/: configurator.py  spinner.py
qspin/: __init__.py
qspin.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
